RESOLVED FIXED102946
Source/WTF/wtf/Assertions.cpp: fix build on a uClibc system
https://bugs.webkit.org/show_bug.cgi?id=102946
Summary Source/WTF/wtf/Assertions.cpp: fix build on a uClibc system
Anthony G. Basile
Reported 2012-11-21 08:09:04 PST
Created attachment 175450 [details] Refines the check for OS(LINUX) so that !defined(__UCLIBC__) webkit-gtk fails to build on a uClibc system because Assertions.cpp assumes that all Linux systems have execinfo.h and provide backtrace(). This is not necessarily the case for uClibc which can be configured without these. This patch refines the check for OS(LINUX) to prevent this breakage. Downstream bug: https://bugs.gentoo.org/441674
Attachments
Refines the check for OS(LINUX) so that !defined(__UCLIBC__) (1.57 KB, patch)
2012-11-21 08:09 PST, Anthony G. Basile
tony: review-
tony: commit-queue-
Refines the check for OS(LINUX) so that !defined(__UCLIBC__) (2.51 KB, patch)
2012-11-21 11:22 PST, Anthony G. Basile
tony: review+
tony: commit-queue-
Refines the check for OS(LINUX) so that !defined(__UCLIBC__) (2.51 KB, patch)
2012-11-21 11:42 PST, Anthony G. Basile
no flags
Tony Chang
Comment 1 2012-11-21 10:28:25 PST
Comment on attachment 175450 [details] Refines the check for OS(LINUX) so that !defined(__UCLIBC__) This patch is missing a ChangeLog. Please re-read http://www.webkit.org/coding/contributing.html .
Anthony G. Basile
Comment 2 2012-11-21 11:22:17 PST
Created attachment 175488 [details] Refines the check for OS(LINUX) so that !defined(__UCLIBC__) This patch now includes the ChangeLog as produced by prepare-ChangeLog and edited according to http://www.webkit.org/coding/contributing.html#changelogs.
Tony Chang
Comment 3 2012-11-21 11:29:59 PST
Comment on attachment 175488 [details] Refines the check for OS(LINUX) so that !defined(__UCLIBC__) View in context: https://bugs.webkit.org/attachment.cgi?id=175488&action=review > Source/WTF/ChangeLog:13 > + Originally reported at https://bugs.gentoo.org/441673 Typo, this should be bug 441674. Please upload a new diff with this fixed.
Anthony G. Basile
Comment 4 2012-11-21 11:42:31 PST
Created attachment 175492 [details] Refines the check for OS(LINUX) so that !defined(__UCLIBC__) Agh! Third times a charm?
WebKit Review Bot
Comment 5 2012-11-21 12:24:59 PST
Comment on attachment 175492 [details] Refines the check for OS(LINUX) so that !defined(__UCLIBC__) Clearing flags on attachment: 175492 Committed r135425: <http://trac.webkit.org/changeset/135425>
WebKit Review Bot
Comment 6 2012-11-21 12:25:03 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.