Source/WTF/wtf/Assertions.cpp: fix build on a uClibc system https://bugs.webkit.org/show_bug.cgi?id=102946

Patch by Anthony G. Basile <blueness@gentoo.org> on 2012-11-21
Reviewed by Tony Chang.

Webkit-Gtk fails to build on a uClibc system because
Assertions.cpp assumes that all Linux systems have execinfo.h
and provide backtrace(). This is not necessarily the case for
uClibc which can be configured without these.  This patch
refines the check for OS(LINUX) to prevent this breakage.
Originally reported at https://bugs.gentoo.org/441674

* wtf/Assertions.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@135425 bbb929c8-8fbe-4397-9dbb-9b2b20218538